Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58478

QWebEnginePage::setHtml crash when render process crashed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.10.0 Beta 1
    • 5.7.1, 5.8.0
    • WebEngine
    • None
    • Linux
    • cf06b687845b6e37ef3cd80fd644bb7d769f0033

      When render process crashes, calling QWebEnginePage::setHtml() will also crash the application.
      QWebEnginePage::load() correctly restarts render process and doesn't crash.

      test.cpp
      QWebEnginePage *page = new QWebEnginePage;
      connect(page, &QWebEnginePage::renderProcessTerminated, [=]() {
          QTimer::singleShot(0, [=]() {
              page->setHtml(QStringLiteral("<html></html>"));
              // Crash
          });
      });
      

        For Gerrit Dashboard: QTBUG-58478
        # Subject Branch Project Status CR V

            pvarga Peter Varga
            nowrep David Rosca
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes